--- a/Futures_API/appsettings.json
+++ b/Futures_API/appsettings.json
@@ -9,9 +9,7 @@
     "ConnectionString": "InstrumentationKey=1d25a883-7eb4-44b9-9406-9084612d25fd;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "DbConnection": "Data Source=DVT-CHANGEMENOW;Initial Catalog=gab-test;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
-//  "ConnectionStrings": { "DbConnection": "Server=DVT-PF3BDYD8;Database=FUTURES;Trusted_Connection=True;MultipleActiveResultSets=true" }
+  "ConnectionStrings": {
+    "DbConnection": "key\" }"
 
-  // "Server=DESKTOP-1521L6H\\SQLEXPRESS;Database=FUTURES;Trusted_Connection=True;MultipleActiveResultSets=true"
-  // Data Source=DVT-CHANGEMENOW;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
-}
+  }
