--- a/Futures/appsettings.json
+++ b/Futures/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MainDb": "Server=DVT-PF3BDYD8;Database=FUTURES;Trusted_Connection=True;",
-    "FuturesContext": "Server=DVT-PF3BDYD8;Database=FUTURES;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MainDb": "key",
+    "FuturesContext": "key",
     // "EndPointURL": "https://localhost:44327/"
     "EndPointURL": "https://localhost:7084/"
 
